tests/bad/value_enums/constructor_wrong_types.oc
/// fail: Expected field 0 with type str, but got u32

enum Foo {
    Case0(i32)
    Case1(str, i32)
    Case2(str)
    Case3
}

def main() {
    let foo: Foo = Case2(7)
}